# data-gen-etl-lab

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirement.txt  requirements.txt  setup.py
.github/workflows/: cd.yml
assets/data/raw/: Army_01.json  Army_02.json  Orders_01.csv  Orders_02.csv  Orders_11.json  Orders_12.json  Orders_13.json  Persons_01.json  Persons_02.json  Products_01.json  Products_02.json  Sellers_01.csv  Sellers_02.csv
docs/: README.md  Spark Overview.ipynb
docs/examples/: basic_transformations.md  main.py  utility_usage.md
docs/tutorials/: Azure Data Factory.ipynb  Exercise.md  Setup ADLS, Keyvault, Secret Scope.md  getting_started.md
scripts/: create_sample_data.py  setup.sh
src/configs/: logging_config.py  spark_config.py
src/generators/: generate_fake_army_data.py  generate_fake_smart_city_data.py
src/notebooks/: 11. students_etl.ipynb  13. ecommerce_etl.ipynb  15. postgres_etl.ipynb
src/pipelines/: data_quality_job.py  etl_pipeline.py  sample_etl_job.py  word_count_job.py
src/schemas/: common_schemas.py
src/scripts/: army_etl.py  configs.py  data_analysis_pandas.py  generate_fake_ecommerce_data.py  utililties.py
src/utilities/: __init__.py
templates/config_templates/: dev_config.yaml  prod_config.yaml
templates/job_templates/: batch_job_template.py  etl_job_template.py
templates/notebook_templates/: analysis_template.ipynb
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/unit/: test_data_cleaning.py  test_spark_utils.py  test_transformations.py
(+34 files in other folders)
